cmake_minimum_required(VERSION 2.6)
project(CryptoTest)
set(CryptoText_VERSION_MAJOR 1)
set(CryptoText_VERSION_MINOR 0)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g3 -ggdb -O0 -Wall -Wextra -Wno-unused --std=c++11")
find_library(cryptopp SHARED /usr/lib/libcryptopp.so)
find_library(pthread SHARED /usr/lib/libpthread.so.0)
add_executable(TestProgram TestProgram.cpp)
target_link_libraries(TestProgram cryptopp pthread)
